[package]
name = "nvr"
version = "0.1.0"
authors = ["Janus <janus@insignificancegalore.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = { version = "0.6", features = ["edge"] }
anyhow = "1.0"
serde_json = "1.0"
pulldown-cmark = "0.8"